Add user register function

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,7 +59,7 @@ assignment.create.label=Create assignment for {0}
 assignment.edit.label=Edit assignment for {0}
 assignment.upload.label=Upload an Assignment
 assignment.uploaded.label=Assignment Uploaded
-assignment.show.label=Assignment {0} for {1}
+assignment.show.label=View Analysis Result
 
 report.summary.label=Summary report for {0}
 report.student.label=Student report for {0}
@@ -72,4 +72,8 @@ user.password.confirm.mismatch=Password and confirmation don't match
 user.password.blankortooshort=Password must be a minimum of 8 characters
 user.username.blankortooshort=Username must be a minimum of 3 characters
 user.action.create.label=Change password for {0}
+
+tutor.familyName.label = Family Name
+tutor.givenName.label = Given Name
+tutor.tutorId.label = Tutor ID
 
